objects/Product_Cross_Reference__c.object
<CustomObject>
    <description>Object contains cross reference information for products and how they are referred to by various manufacturers/suppliers/vendors. Object is a detail relationship to Products and will be searchable by name, description and vendor. Will contain cost information for future expansion.</description>
    <fields>
        <fullName>Barcode__c</fullName>
        <description>For future use of barcoding products</description>
        <label>Barcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Standard cost from this vendor. Not used as of 4/1/2014</description>
        <inlineHelpText>Enter the cost to purchase this item from this vendor.</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Internal description of the cross reference product</description>
        <inlineHelpText>Internal description of the cross reference product</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <description>Manufacturer of the part supplied as this cross reference from this supplier</description>
        <label>Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referenced product from the product master</description>
        <inlineHelpText>Select the product from the product master that this cross reference is related to.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Cross References</relationshipLabel>
        <relationshipName>Product_Cross_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Description__c</fullName>
        <description>Description of part used by vendor</description>
        <inlineHelpText>Vendor&apos;s description of the part</inlineHelpText>
        <label>Supplier Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <description>Name referenced by the vendor for this product</description>
        <inlineHelpText>Name the vendor uses to refer to this product</inlineHelpText>
        <label>Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor to which this cross referenced product applies</description>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Supplier, Vendor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Cross References</relationshipLabel>
        <relationshipName>Product_Cross_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Cross Reference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Cross Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Cross References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>require_product</fullName>
        <active>true</active>
        <description>product is always required</description>
        <errorConditionFormula>isblank (  Product__c )</errorConditionFormula>
        <errorMessage>Product is required to create a cross reference.</errorMessage>
    </validationRules>
</CustomObject>